# AppCtrl

./: LICENSE  README.md  app-window.html  build_error.txt  index.html  package-lock.json  package.json  rust_error.txt  tailwind.config.js
.github/workflows/: build.yml
src/: App.tsx  FileExplorerModal.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/store/: appStore.tsx
src/types/: index.ts
