[package]
name = "appctrl"
version = "1.0.0"
description = "Simple application launcher"
authors = ["AppCtrl"]
edition = "2021"

[lib]
name = "appctrl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "shellapi", "winuser", "wingdi", "libloaderapi"] }
image = "0.25"
base64 = "0.22"

# Optimize for size
[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = "z"

# Reduce debug info size in dev
[profile.dev]
debug = 0  # No debug info (much smaller target dir)
strip = "debuginfo"
